# gacha-machine

./: Anchor.toml  README.md  backup1.js  package.json  pnpm-lock.yaml  tsconfig.json
config/: gacha_machine.json  shared.json  urls.json
programs/gacha-machine/: Cargo.toml
programs/gacha-machine/src/: constants.rs  contexts.rs  errors.rs  events.rs  helpers.rs  lib.rs  states.rs
programs/gacha-machine/src/instructions/: admin.rs  user.rs
scripts/: 1_deployFactory.ts  2_deployGachaMachine.ts  3_close_accounts.ts  check-payment-configs.ts  deploy.ts  gacha-client.ts  randomness.json  sbUtils.ts  user-interactions_sol_and_spl.ts  user-views.ts  utils.ts
src/: check-payment-configs.js  check-payment-configs.ts  deploy.js  gacha-client.js  sbUtils.js  user-interactions.js  user-interactions_sol_and_spl.js  user-views.js  utils.js
tests/: test.ts
