[package]
name = "gacha-machine"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gacha_machine"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
    "switchboard-on-demand/idl-build"
]


[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
switchboard-on-demand = { version = "0.10.1", features = ["anchor"] }
